fix FAQ distortion glitch

--- a/css/faq.css
+++ b/css/faq.css
@@ -142,7 +142,7 @@ h2
 @media  (max-width: 1150px )
 {   
     .wrapper{
-        height: 80vh;
+        height: 100vh;
     }
     .img
     { 
